--- a/_posts/2019-3-27-wx.md
+++ b/_posts/2019-3-27-wx.md
@@ -1,6 +1,6 @@
 # 微信开放平台、公众号和小程序的总结
 ---
-title: 微信开放平台、公众号和小程序的总结
+title: wx-openid-and-unionid
 date: 2019-3-27
 category: 微信
 tags: 微信体系 微信公众号 微信开放平台 OpenID和UnionID
