--- a/_posts/2019-3-27-微信开放平台、公众号和小程序的总结.md
+++ b/_posts/2019-3-27-微信开放平台、公众号和小程序的总结.md
@@ -1,33 +1,34 @@
 ---
 title: 微信开放平台、公众号和小程序的总结
 date: 2019-3-27
-category: 微信
+category: WeiXin
 tags: 微信体系 微信公众号 微信开放平台 OpenID和UnionID
+layout: default
 ---
 
 # 微信开放平台、公众号和小程序的总结
 
-![header-pic](header-pic.jpg)
+![header-pic]({{site.url}}/assets/images/header-pic.jpg)
 最近接到企业微信和个人微信相关项目的开发，其中涉及到公众号、小程序、openID和unionID相关的知识点。之前我只是了解大致的关系和流程，并不是特别精通其中原理。借此机会，我把这部分信息整理总结，同时也分享给我的战友（产品经理周少爷）。
 
 ## 微信体系介绍
 微信开放平台下属支持移动应用、网站应用、公众账号、小程序、第三方平台。微信开放平台有独立的登录账号和主体。
-![界面截图](界面截图.png)
+![界面截图]({{site.url}}/assets/images/界面截图.png)
 
 * 移动应用：如果iOS、Android或者WP的APP需要支持微信的分享、支付、登录等等微信功能，就需要在移动应用区域创建和配置APP信息。iOS配置**Bundle ID**、Android配置**Package Name**
 
 * 网站应用：类似移动应用，如果网站需要使用微信的登录等微信功能，就需要在网站应用区域创建和配置网站信息。
 
-* 公众账号：微信开放平台也可以绑定多个微信公众号（PS：**相同主体**：上限50个，绑定次数不限。**不同主体**：上限5个，本月还可以绑定5次。），无论微信公众号主体是否和微信开放平台主体一致。
+* 公众账号：微信开放平台也可以绑定多个微信公众号（PS：**相同主体**：上限50个**不同主体**：上限5个），无论微信公众号主体是否和微信开放平台主体一致。
 
-* 小程序：类似公众账号，微信开放平台也可以绑定多个微信小程序（PS：**相同主体**：上限50个，绑定次数不限。**不同主体**：上限5个，本月还可以绑定5次。），无论微信小程序主体是否和微信开放平台主体一致。
+* 小程序：类似公众账号，微信开放平台也可以绑定多个微信小程序（PS：**相同主体**：上限50个**不同主体**：上限5个），无论微信小程序主体是否和微信开放平台主体一致。
 
 * 第三方平台：公众平台第三方平台是为了让公众号或小程序运营者，在面向垂直行业需求时，可以一键授权给第三方平台（并且可以同时授权给多家第三方），通过第三方平台来完成业务，开放给所有通过开发者资质认证后的开发者使用。（我暂时未使用过这类型）
 
   
 
   微信开放平台就类似下面的体系架构图
-  ![微信体系架构图](微信体系架构图.png)
+  ![微信体系架构图]({{site.url}}/assets/images/微信体系架构图.png)
   公众号 A和开放平台主体一致，公众号 B和公众号 A及开放平台主体都不一致。
   小程序 A和开放平台主体一致，小程序 B和公众号 A及开放平台主体都不一致。
 ## OpenID和UnionID
